fixing dockerfile vs data location

--- a/autochannel-bot/Dockerfile
+++ b/autochannel-bot/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.6-alpine
 
-COPY . /app
+COPY autochannel-bot/ /app
 WORKDIR /app
 
 RUN apk add gcc musl-dev libffi-dev libxml2-dev libxslt-dev git make
